<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Duckie</string>
    <string name="subtitle">a cricket calculator</string>
    <string name="change_match_type_label">Change match type</string>
    <string name="change_g50_label">Change G50</string>
    <string name="about_label">About</string>
    <string name="dl_calculator_label">Duckworth-Lewis Calculator</string>
    <string name="overs_lost_calculator_label">Overs Lost Calculator</string>
    <string name="first_innings_label">1st Innings</string>
    <string name="second_innings_label">2nd Innings</string>
    <string name="result_label">Result</string>
    <string name="first_innings_score_label">Score after first innings</string>
    <string name="interruption_score_label">Score at interruption</string>
    <string name="starting_overs_label">Total available overs\n(beginning of innings)</string>
    <string name="add_interruption_label">Add interruption</string>
    <string name="runs_wickets_separator">/</string>
    <string name="target_score">Target score:</string>
    <string name="calculation_error_label">Error</string>
    <string name="calculation_error_detail">Unable to calculate target score.\nPlease check input values.</string>
    <string name="no_result_label">No result</string>
    <string name="no_result_detail">(minimum of %s overs\nrequired per side)</string>
    <string name="interruptions_label">Interruptions</string>
    <string name="edit_interruption">Edit</string>
    <string name="delete_interruption">Delete</string>
    <string name="interruption_overs_completed_label">Overs completed</string>
    <string name="interruption_new_total_overs">Total available overs\n(reduced figure)</string>
    <string name="interruption_title">Interruption at %1$s/%2$s after %3$s overs</string>
    <string name="invalid_interruption_toast">Invalid interruption</string>
    <string name="delete_interruption_message">Delete interruption?</string>
    <string name="delete_interruption_positive_button">Delete</string>
    <string name="continue_button">Continue</string>
    <string name="change_match_type_50_overs">One day (50 overs)</string>
    <string name="change_match_type_20_overs">Twenty20 (20 overs)</string>
    <string name="pro_g50_label">%s (ICC full member nations, first class cricket teams)</string>
    <string name="amateur_g50_label">%s (ICC associate member nations, Under-19, Under-15, Women\'s ODIs)</string>
    <string name="custom_g50_label">Custom G50</string>
    <string name="invalid_g50_toast">Invalid G50</string>
    <string name="total_play_time_lost_label">Total play time lost</string>
    <string name="including_drinks_label">(including drinks breaks)</string>
    <string name="hours_label">hrs</string>
    <string name="minutes_label">mins</string>
    <string name="calculate_overs_lost_button_label">Calculate</string>
    <string name="reset_overs_lost_button_label">Reset</string>
    <string name="overs_lost_label">overs lost</string>
    <string name="change_overs_per_hour_label">Change overs per hour</string>
    <string name="mens_odi_label">%s overs per hour (ODI)</string>
    <string name="mens_t20_label">%s overs per hour (T20)</string>
    <string name="womens_odi_label">%s overs per hour (Women\'s ODI)</string>
    <string name="womens_t20_label">%s overs per hour (Women\'s T20)</string>
    <string name="custom_overs_per_hour_label">Custom overs per hour</string>
    <string name="overs_per_hour_success_toast">Overs lost recalculated</string>
    <string name="invalid_overs_per_hour_toast">Invalid overs per hour</string>
    <string name="about_page_first_paragraph">Target scores for weather affected
        cricket matches are calculated using the Duckworth-Lewis method. It uses the Standard Edition which was
        used for all matches prior to 2003. The current method used for all international matches
        is the Professional Edition, however using this method requires software which is not publicly
        available. The results using the Standard Edition are generally similar to those from the
        Professional Edition, but the results start to diverge for very high first innings totals
        (around 350 runs and more). Results are calculated using the over-by-over tables
        provided in the ICC Playing Handbook 2013-2014.</string>
    <string name="about_page_second_paragraph">The number of overs lost is calculated based on
        the over rates provided in the ICC Playing Handbook 2013-2014. The default over rate of the
        calculator is 14.28 overs per hour which is the rate for standard One Day International
        matches, but this rate can be changed in the menu.</string>
    <string name="rate_app_button">Rate App</string>
    <string name="send_feedback_button">Send Feedback</string>
    <string name="app_version_label">Version %s</string>
    <string name="feedback_email_subject">Duckie Feedback (%s)</string>
    <string name="feedback_email_address">support@tragicfruit.com</string>

</resources>
