<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <include layout="@layout/focus_here"/>

    <LinearLayout
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:gravity="center_horizontal"
          android:padding="16dp">

        <TextView
            android:gravity="center"
            android:text="@string/total_play_time_lost_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"/>

        <TextView
            android:text="@string/including_drinks_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">

            <EditText
                android:id="@+id/hours_lost_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="2"
                android:textSize="20sp"
                android:gravity="end"/>

            <TextView
                android:text="@string/hours_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/mins_lost_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="2"
                android:textSize="20sp"
                android:gravity="end"/>

            <TextView
                android:text="@string/minutes_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/calculate_overs_lost_button"
                android:text="@string/calculate_overs_lost_button_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"/>

            <Button
                android:id="@+id/reset_button"
                android:text="@string/reset_overs_lost_button_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <TextView
            android:visibility="gone"
            android:layout_marginTop="20dp"
            android:id="@+id/overs_lost_result_textView"
            android:textSize="36sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00 overs lost"/>

    </LinearLayout>

</FrameLayout>