<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#E6A35F">

    <include layout="@layout/focus_here"/>

    <ImageView
        android:src="@drawable/calculator_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView
                android:textColor="@android:color/white"
                android:id="@+id/innings_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="[innings label]"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="16dp"/>

            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:textColor="@android:color/white"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/starting_overs_label"
                    android:textSize="16sp"
                    android:layout_marginBottom="16dp"/>

                <EditText
                    style="@style/EditText"
                    android:gravity="center"
                    android:id="@+id/max_overs_editText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="4"
                    android:layout_marginBottom="16dp"/>

            </LinearLayout>

            <TextView
                android:textColor="@android:color/white"
                android:id="@+id/interruptions_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/interruptions_label"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="16sp"
                android:visibility="gone"/>

            <LinearLayout
                android:id="@+id/interruption_list_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>

            <Button
                android:id="@+id/add_interruption_button"
                android:text="@string/add_interruption_label"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"/>

            <LinearLayout
                android:id="@+id/first_innings_score_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginBottom="16dp">

                <TextView
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_innings_score_label"
                    android:textSize="16sp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:gravity="center"
                        style="@style/EditText"
                        android:id="@+id/first_innings_runs_editText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="4"/>

                    <TextView
                        android:textColor="@android:color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="50sp"
                        android:text="@string/runs_wickets_separator"/>

                    <EditText
                        android:gravity="center"
                        style="@style/EditText"
                        android:id="@+id/first_innings_wickets_editText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="2"/>

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/continue_button"
                android:text="@string/continue_button"
                android:background="@drawable/transparent_button"
                android:layout_margin="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>